<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="action_settings">Settings</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="add_photo">Add Photo</string>
    <string name="Effects">Effects</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_frm_gallery">Choose from Gallery</string>
    <string name="permission_required">Permission Required</string>
    <string name="external_storage_permission_required"> External storage permission is necessary</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_image_confirmation">Your changes will be discarded. Are you sure want to quit without saving?</string>
    <string name="alert">Alert!</string>
    <string name="select_file">Select File</string>
    <string name="saved_files">Saved Collections</string>
    <string name="no_files">No files found.</string>

    <string name="image_effect_highlight">Highlight</string>
    <string name="image_effect_invert">Invert</string>
    <string name="image_effect_gray">GreyScale</string>
    <string name="image_effect_decrease_color_depth">Decrease Color Depth</string>
    <string name="image_effect_contrast">Contrast</string>
    <string name="image_effect_gaussian_blur">Gaussian Blur</string>
    <string name="image_effect_bright">Bright</string>
    <string name="image_effect_share_pen">Share Pen</string>
    <string name="image_effect_mean_removal">Mean removal</string>
    <string name="image_effect_mean_smooth">Smooth</string>
    <string name="image_effect_mean_emboss">Emboss</string>
    <string name="image_effect_mean_engrave">Engrave</string>
    <string name="image_effect_mean_round_corner">Round Corner</string>
    <string name="please_edit_image">Please edit your image</string>
    <string name="file_name_empty">Please enter file name</string>
    <string name="file_name">File Name</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>
    <string name="applying_effect">Applying effect...</string>

    <string-array name="photo_options">
        <item>@string/take_photo</item>
        <item>@string/choose_frm_gallery</item>
    </string-array>
</resources>
